fix(core): breadcrumb overflow ellipsis

--- a/packages/core/src/components/breadcrumb/breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/breadcrumb.scss
@@ -119,7 +119,7 @@
 
     .crumb-text {
       @include ellipsis;
-      display: flex;
+      display: inline-block;
       align-items: center;
       min-width: 0;
       font-weight: $font-weight-bold;
